--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
+# See https://scalacourses.com/student/showLecture/19
+
 # This is the production configuration file for the application.
 
 ## JDBC Datasource
