--- a/conf/common.conf
+++ b/conf/common.conf
@@ -1,3 +1,5 @@
+# See https://scalacourses.com/student/showLecture/19
+
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 # ~~~~~
