--- a/conf/common.conf
+++ b/conf/common.conf
@@ -30,6 +30,11 @@ akka {
   log-config-on-start = ${?CONFIG_DUMP}
 }
 
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
+}
+
 ## Secret key
 # http://www.playframework.com/documentation/latest/ApplicationSecret
 # ~~~~~
