--- a/conf/common.conf
+++ b/conf/common.conf
@@ -40,7 +40,7 @@ play.assets {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.crypto.secret = "changeme"
+play.http.secret.key = "changeme"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -131,20 +131,51 @@ play.http {
   # https://www.playframework.com/documentation/latest/ScalaSessionFlash
   # ~~~~~
   session {
+    cookieName = "PLAY_SESSION"
+
     # Sets the cookie to be sent only over HTTPS.
-    secure = true
+    secure = false
 
-    # Sets the cookie to be accessed only by the server.
-    httpOnly = true
-
+    # The max age to set on the cookie.
     # Sets the max-age field of the cookie to 5 minutes.
     # NOTE: this only sets when the browser will discard the cookie. Play will consider any
     # cookie value with a valid signature to be a valid session forever. To implement a server side session timeout,
     # you need to put a timestamp in the session and check it at regular intervals to possibly expire it.
-    #maxAge = 300
+    # If null, the cookie expires when the user closes their browser.
+    # An important thing to note, this only sets when the browser will discard the cookie.
+    maxAge = null
+
+    # Sets the cookie to be accessed only by the server.
+    httpOnly = true
+
+    # The value of the SameSite attribute of the cookie. Set to null for no SameSite attribute.
+    sameSite = "lax"
 
     # Sets the domain on the session cookie.
+    # Does not set a domain on the session cookie if null or not specified.
+    domain = null
     #domain = "example.com"
+
+    # The session path. Must start with /.
+    path = ${play.http.context}
+
+    jwt {
+      # The JWT signature algorithm to use on the session cookie
+      # uses 'alg' https://tools.ietf.org/html/rfc7515#section-4.1.1
+      signatureAlgorithm = "HS256"
+
+      # The time after which the session is automatically invalidated.
+      # Use 'exp' https://tools.ietf.org/html/rfc7519#section-4.1.4
+      expiresAfter = ${play.http.session.maxAge}
+
+      # The amount of clock skew to accept between servers when performing date checks
+      # If you have NTP or roughtime synchronizing between servers, you can enhance
+      # security by tightening this value.
+      clockSkew = 5 minutes
+
+      # The claim key under which all user data is stored in the JWT.
+      dataClaim = "data"
+    }
   }
 
   flash {
