--- a/conf/dev.conf
+++ b/conf/dev.conf
@@ -6,10 +6,11 @@
 # https://www.playframework.com/documentation/latest/JavaDatabase
 # https://www.playframework.com/documentation/latest/ScalaDatabase
 # ~~~~~
-# Once JDBC datasource is set up, you can work with several different
-# database options:
+# Once JDBC datasource is set up, you can work with several different database options:
 #
-# Slick (Scala preferred option): https://www.playframework.com/documentation/latest/PlaySlick
+# Quill: http://getquill.io/
+# Doobie: http://tpolecat.github.io/doobie/
+# Slick: https://www.playframework.com/documentation/latest/PlaySlick
 # JPA (Java preferred option): https://playframework.com/documentation/latest/JavaJPA
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
